[package]
name = "bzd-lib"
edition = "2024"

[dependencies]
anyhow = "1.0.100"

config = { version = "0.15.19", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tracing = "0.1.43"
tracing-subscriber = "0.3.22"

tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.2"
