[package]
name = "bzd-lib"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

config = { version = "0.15.19", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"

strum = "0.28.0"
strum_macros = "0.28.0"
chrono = "0.4.44"

[build-dependencies]
tonic-prost-build = "0.14.5"
